1.8.0/_sources/reference/dipy.reconst.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`reconst`
==============
.. automodule:: dipy.reconst

.. currentmodule:: dipy.reconst
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.base`
---------------------------
.. automodule:: dipy.reconst.base

.. currentmodule:: dipy.reconst.base
.. autosummary::

   ReconstModel
   ReconstFit

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.cache`
----------------------------
.. automodule:: dipy.reconst.cache

.. currentmodule:: dipy.reconst.cache
.. autosummary::

   Cache

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.cross_validation`
---------------------------------------
.. automodule:: dipy.reconst.cross_validation

.. currentmodule:: dipy.reconst.cross_validation
.. autosummary::

   coeff_of_determination
   kfold_xval

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.csdeconv`
-------------------------------
.. automodule:: dipy.reconst.csdeconv

.. currentmodule:: dipy.reconst.csdeconv
.. autosummary::

   AxSymShResponse
   ConstrainedSphericalDeconvModel
   ConstrainedSDTModel
   auto_response
   response_from_mask
   estimate_response
   forward_sdt_deconv_mat
   csdeconv
   odf_deconv
   odf_sh_to_sharp
   mask_for_response_ssst
   response_from_mask_ssst
   auto_response_ssst
   recursive_response
   fa_trace_to_lambdas

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.cti`
--------------------------
.. automodule:: dipy.reconst.cti

.. currentmodule:: dipy.reconst.cti
.. autosummary::

   CorrelationTensorModel
   CorrelationTensorFit
   from_qte_to_cti
   multi_gaussian_k_from_c
   split_cti_params
   cti_prediction
   params_to_cti_params
   ls_fit_cti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dki`
--------------------------
.. automodule:: dipy.reconst.dki

.. currentmodule:: dipy.reconst.dki
.. autosummary::

   DiffusionKurtosisModel
   DiffusionKurtosisFit
   carlson_rf
   carlson_rd
   directional_diffusion
   directional_diffusion_variance
   directional_kurtosis
   apparent_kurtosis_coef
   mean_kurtosis
   radial_kurtosis
   axial_kurtosis
   kurtosis_maximum
   mean_kurtosis_tensor
   kurtosis_fractional_anisotropy
   dki_prediction
   params_to_dki_params
   ls_fit_dki
   cls_fit_dki
   Wrotate
   Wrotate_element
   Wcons
   split_dki_param

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dki_micro`
--------------------------------
.. automodule:: dipy.reconst.dki_micro

.. currentmodule:: dipy.reconst.dki_micro
.. autosummary::

   KurtosisMicrostructureModel
   KurtosisMicrostructuralFit
   axonal_water_fraction
   diffusion_components
   dkimicro_prediction
   tortuosity

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dsi`
--------------------------
.. automodule:: dipy.reconst.dsi

.. currentmodule:: dipy.reconst.dsi
.. autosummary::

   DiffusionSpectrumModel
   DiffusionSpectrumFit
   DiffusionSpectrumDeconvModel
   DiffusionSpectrumDeconvFit
   create_qspace
   create_qtable
   hanning_filter
   pdf_interp_coords
   pdf_odf
   half_to_full_qspace
   project_hemisph_bvecs
   threshold_propagator
   gen_PSF
   LR_deconv

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dti`
--------------------------
.. automodule:: dipy.reconst.dti

.. currentmodule:: dipy.reconst.dti
.. autosummary::

   TensorModel
   TensorFit
   fractional_anisotropy
   geodesic_anisotropy
   mean_diffusivity
   axial_diffusivity
   radial_diffusivity
   trace
   color_fa
   determinant
   isotropic
   deviatoric
   norm
   mode
   linearity
   planarity
   sphericity
   apparent_diffusion_coef
   tensor_prediction
   iter_fit_tensor
   wls_fit_tensor
   ols_fit_tensor
   nlls_fit_tensor
   restore_fit_tensor
   _lt_indices
   from_lower_triangular
   _lt_rows
   _lt_cols
   lower_triangular
   decompose_tensor
   design_matrix
   quantize_evecs
   eig_from_lo_tri

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.eudx_direction_getter`
--------------------------------------------
.. automodule:: dipy.reconst.eudx_direction_getter

.. currentmodule:: dipy.reconst.eudx_direction_getter
.. autosummary::

   EuDXDirectionGetter

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.forecast`
-------------------------------
.. automodule:: dipy.reconst.forecast

.. currentmodule:: dipy.reconst.forecast
.. autosummary::

   ForecastModel
   ForecastFit
   find_signal_means
   forecast_error_func
   psi_l
   forecast_matrix
   rho_matrix
   lb_forecast

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.fwdti`
----------------------------
.. automodule:: dipy.reconst.fwdti

.. currentmodule:: dipy.reconst.fwdti
.. autosummary::

   FreeWaterTensorModel
   FreeWaterTensorFit
   fwdti_prediction
   wls_iter
   wls_fit_tensor
   nls_iter
   nls_fit_tensor
   lower_triangular_to_cholesky
   cholesky_to_lower_triangular

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.gqi`
--------------------------
.. automodule:: dipy.reconst.gqi

.. currentmodule:: dipy.reconst.gqi
.. autosummary::

   GeneralizedQSamplingModel
   GeneralizedQSamplingFit
   normalize_qa
   squared_radial_component
   npa
   equatorial_zone_vertices
   polar_zone_vertices
   upper_hemi_map
   equatorial_maximum
   patch_vertices
   patch_maximum
   odf_sum
   patch_sum
   triple_odf_maxima

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.ivim`
---------------------------
.. automodule:: dipy.reconst.ivim

.. currentmodule:: dipy.reconst.ivim
.. autosummary::

   IvimModelTRR
   IvimModelVP
   IvimFit
   ivim_prediction
   f_D_star_prediction
   f_D_star_error
   ivim_model_selector

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.mapmri`
-----------------------------
.. automodule:: dipy.reconst.mapmri

.. currentmodule:: dipy.reconst.mapmri
.. autosummary::

   MapmriModel
   MapmriFit
   isotropic_scale_factor
   mapmri_index_matrix
   b_mat
   b_mat_isotropic
   mapmri_phi_1d
   mapmri_phi_matrix
   mapmri_psi_1d
   mapmri_psi_matrix
   mapmri_odf_matrix
   mapmri_isotropic_phi_matrix
   mapmri_isotropic_radial_signal_basis
   mapmri_isotropic_M_mu_independent
   mapmri_isotropic_M_mu_dependent
   mapmri_isotropic_psi_matrix
   mapmri_isotropic_radial_pdf_basis
   mapmri_isotropic_K_mu_independent
   mapmri_isotropic_K_mu_dependent
   binomialfloat
   mapmri_isotropic_odf_matrix
   mapmri_isotropic_odf_sh_matrix
   mapmri_isotropic_laplacian_reg_matrix
   mapmri_isotropic_laplacian_reg_matrix_from_index_matrix
   mapmri_isotropic_index_matrix
   create_rspace
   delta
   map_laplace_u
   map_laplace_t
   map_laplace_s
   mapmri_STU_reg_matrices
   mapmri_laplacian_reg_matrix
   generalized_crossvalidation_array
   generalized_crossvalidation
   gcv_cost_function

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.mcsd`
---------------------------
.. automodule:: dipy.reconst.mcsd

.. currentmodule:: dipy.reconst.mcsd
.. autosummary::

   MultiShellResponse
   MultiShellDeconvModel
   MSDeconvFit
   QpFitter
   multi_tissue_basis
   solve_qp
   multi_shell_fiber_response
   mask_for_response_msmt
   response_from_mask_msmt
   auto_response_msmt

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.msdki`
----------------------------
.. automodule:: dipy.reconst.msdki

.. currentmodule:: dipy.reconst.msdki
.. autosummary::

   MeanDiffusionKurtosisModel
   MeanDiffusionKurtosisFit
   mean_signal_bvalue
   msk_from_awf
   awf_from_msk
   msdki_prediction
   wls_fit_msdki
   design_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.multi_voxel`
----------------------------------
.. automodule:: dipy.reconst.multi_voxel

.. currentmodule:: dipy.reconst.multi_voxel
.. autosummary::

   MultiVoxelFit
   CallableArray
   multi_voxel_fit

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.odf`
--------------------------
.. automodule:: dipy.reconst.odf

.. currentmodule:: dipy.reconst.odf
.. autosummary::

   OdfModel
   OdfFit
   gfa
   minmax_normalize

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.qtdmri`
-----------------------------
.. automodule:: dipy.reconst.qtdmri

.. currentmodule:: dipy.reconst.qtdmri
.. autosummary::

   QtdmriModel
   QtdmriFit
   qtdmri_to_mapmri_matrix
   qtdmri_isotropic_to_mapmri_matrix
   qtdmri_temporal_normalization
   qtdmri_mapmri_normalization
   qtdmri_mapmri_isotropic_normalization
   qtdmri_signal_matrix_
   qtdmri_signal_matrix
   qtdmri_eap_matrix
   qtdmri_isotropic_signal_matrix_
   qtdmri_isotropic_signal_matrix
   qtdmri_eap_matrix_
   qtdmri_isotropic_eap_matrix_
   qtdmri_isotropic_eap_matrix
   radial_basis_opt
   angular_basis_opt
   radial_basis_EAP_opt
   angular_basis_EAP_opt
   temporal_basis
   qtdmri_index_matrix
   qtdmri_isotropic_index_matrix
   qtdmri_laplacian_reg_matrix
   qtdmri_isotropic_laplacian_reg_matrix
   part23_reg_matrix_q
   part23_iso_reg_matrix_q
   part4_reg_matrix_q
   part4_iso_reg_matrix_q
   part1_reg_matrix_tau
   part23_reg_matrix_tau
   part4_reg_matrix_tau
   H
   generalized_crossvalidation
   GCV_cost_function
   qtdmri_isotropic_scaling
   qtdmri_anisotropic_scaling
   design_matrix_spatial
   create_rt_space_grid
   qtdmri_number_of_coefficients
   l1_crossvalidation
   elastic_crossvalidation
   visualise_gradient_table_G_Delta_rainbow

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.qti`
--------------------------
.. automodule:: dipy.reconst.qti

.. currentmodule:: dipy.reconst.qti
.. autosummary::

   QtiModel
   QtiFit
   from_3x3_to_6x1
   from_6x1_to_3x3
   from_6x6_to_21x1
   from_21x1_to_6x6
   cvxpy_1x6_to_3x3
   cvxpy_1x21_to_6x6
   dtd_covariance
   qti_signal
   design_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.quick_squash`
-----------------------------------
.. automodule:: dipy.reconst.quick_squash

.. currentmodule:: dipy.reconst.quick_squash
.. autosummary::

   quick_squash
   reduce

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.recspeed`
-------------------------------
.. automodule:: dipy.reconst.recspeed

.. currentmodule:: dipy.reconst.recspeed
.. autosummary::

   adj_to_countarrs
   argmax_from_adj
   argmax_from_countarrs
   le_to_odf
   local_maxima
   proc_reco_args
   remove_similar_vertices
   search_descending
   sum_on_blocks_1d

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.rumba`
----------------------------
.. automodule:: dipy.reconst.rumba

.. currentmodule:: dipy.reconst.rumba
.. autosummary::

   RumbaSDModel
   RumbaFit
   logger
   rumba_deconv
   mbessel_ratio
   generate_kernel
   rumba_deconv_global

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.sfm`
--------------------------
.. automodule:: dipy.reconst.sfm

.. currentmodule:: dipy.reconst.sfm
.. autosummary::

   IsotropicModel
   IsotropicFit
   ExponentialIsotropicModel
   ExponentialIsotropicFit
   SparseFascicleModel
   SparseFascicleFit
   sfm_design_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.shm`
--------------------------
.. automodule:: dipy.reconst.shm

.. currentmodule:: dipy.reconst.shm
.. autosummary::

   SphHarmModel
   QballBaseModel
   SphHarmFit
   CsaOdfModel
   OpdtModel
   QballModel
   ResidualBootstrapWrapper
   forward_sdeconv_mat
   sh_to_rh
   gen_dirac
   spherical_harmonics
   real_sph_harm
   real_sh_tournier_from_index
   real_sh_descoteaux_from_index
   real_sh_tournier
   real_sh_descoteaux
   real_sym_sh_mrtrix
   real_sym_sh_basis
   sph_harm_ind_list
   order_from_ncoef
   smooth_pinv
   lazy_index
   normalize_data
   hat
   lcr_matrix
   bootstrap_data_array
   bootstrap_data_voxel
   sf_to_sh
   sh_to_sf
   sh_to_sf_matrix
   calculate_max_order
   anisotropic_power
   convert_sh_to_full_basis
   convert_sh_from_legacy
   convert_sh_to_legacy

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.shore`
----------------------------
.. automodule:: dipy.reconst.shore

.. currentmodule:: dipy.reconst.shore
.. autosummary::

   ShoreModel
   ShoreFit
   shore_matrix
   shore_matrix_pdf
   shore_matrix_odf
   l_shore
   n_shore
   create_rspace
   shore_indices
   shore_order

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.utils`
----------------------------
.. automodule:: dipy.reconst.utils

.. currentmodule:: dipy.reconst.utils
.. autosummary::

   dki_design_matrix
   cti_design_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.vec_val_sum`
----------------------------------
.. automodule:: dipy.reconst.vec_val_sum

.. currentmodule:: dipy.reconst.vec_val_sum
.. autosummary::

   vec_val_vect


.. currentmodule:: dipy.reconst


.. currentmodule:: dipy.reconst.base


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.reconst.cache


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.reconst.cross_validation

coeff_of_determination
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: coeff_of_determination

kfold_xval
~~~~~~~~~~

.. autofunction:: kfold_xval


.. currentmodule:: dipy.reconst.csdeconv


:class:`AxSymShResponse`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AxSymShResponse
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ConstrainedSphericalDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSphericalDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ConstrainedSDTModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSDTModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

auto_response
~~~~~~~~~~~~~

.. autofunction:: auto_response

response_from_mask
~~~~~~~~~~~~~~~~~~

.. autofunction:: response_from_mask

estimate_response
~~~~~~~~~~~~~~~~~

.. autofunction:: estimate_response

forward_sdt_deconv_mat
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: forward_sdt_deconv_mat

csdeconv
~~~~~~~~

.. autofunction:: csdeconv

odf_deconv
~~~~~~~~~~

.. autofunction:: odf_deconv

odf_sh_to_sharp
~~~~~~~~~~~~~~~

.. autofunction:: odf_sh_to_sharp

mask_for_response_ssst
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mask_for_response_ssst

response_from_mask_ssst
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: response_from_mask_ssst

auto_response_ssst
~~~~~~~~~~~~~~~~~~

.. autofunction:: auto_response_ssst

recursive_response
~~~~~~~~~~~~~~~~~~

.. autofunction:: recursive_response

fa_trace_to_lambdas
~~~~~~~~~~~~~~~~~~~

.. autofunction:: fa_trace_to_lambdas


.. currentmodule:: dipy.reconst.cti


:class:`CorrelationTensorModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CorrelationTensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CorrelationTensorFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CorrelationTensorFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

from_qte_to_cti
~~~~~~~~~~~~~~~

.. autofunction:: from_qte_to_cti

multi_gaussian_k_from_c
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: multi_gaussian_k_from_c

split_cti_params
~~~~~~~~~~~~~~~~

.. autofunction:: split_cti_params

cti_prediction
~~~~~~~~~~~~~~

.. autofunction:: cti_prediction

params_to_cti_params
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: params_to_cti_params

ls_fit_cti
~~~~~~~~~~

.. autofunction:: ls_fit_cti


.. currentmodule:: dipy.reconst.dki


:class:`DiffusionKurtosisModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionKurtosisModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionKurtosisFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionKurtosisFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

carlson_rf
~~~~~~~~~~

.. autofunction:: carlson_rf

carlson_rd
~~~~~~~~~~

.. autofunction:: carlson_rd

directional_diffusion
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: directional_diffusion

directional_diffusion_variance
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: directional_diffusion_variance

directional_kurtosis
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: directional_kurtosis

apparent_kurtosis_coef
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: apparent_kurtosis_coef

mean_kurtosis
~~~~~~~~~~~~~

.. autofunction:: mean_kurtosis

radial_kurtosis
~~~~~~~~~~~~~~~

.. autofunction:: radial_kurtosis

axial_kurtosis
~~~~~~~~~~~~~~

.. autofunction:: axial_kurtosis

kurtosis_maximum
~~~~~~~~~~~~~~~~

.. autofunction:: kurtosis_maximum

mean_kurtosis_tensor
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mean_kurtosis_tensor

kurtosis_fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: kurtosis_fractional_anisotropy

dki_prediction
~~~~~~~~~~~~~~

.. autofunction:: dki_prediction

params_to_dki_params
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: params_to_dki_params

ls_fit_dki
~~~~~~~~~~

.. autofunction:: ls_fit_dki

cls_fit_dki
~~~~~~~~~~~

.. autofunction:: cls_fit_dki

Wrotate
~~~~~~~

.. autofunction:: Wrotate

Wrotate_element
~~~~~~~~~~~~~~~

.. autofunction:: Wrotate_element

Wcons
~~~~~

.. autofunction:: Wcons

split_dki_param
~~~~~~~~~~~~~~~

.. autofunction:: split_dki_param


.. currentmodule:: dipy.reconst.dki_micro


:class:`KurtosisMicrostructureModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: KurtosisMicrostructureModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`KurtosisMicrostructuralFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: KurtosisMicrostructuralFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

axonal_water_fraction
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: axonal_water_fraction

diffusion_components
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: diffusion_components

dkimicro_prediction
~~~~~~~~~~~~~~~~~~~

.. autofunction:: dkimicro_prediction

tortuosity
~~~~~~~~~~

.. autofunction:: tortuosity


.. currentmodule:: dipy.reconst.dsi


:class:`DiffusionSpectrumModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumDeconvFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumDeconvFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

create_qspace
~~~~~~~~~~~~~

.. autofunction:: create_qspace

create_qtable
~~~~~~~~~~~~~

.. autofunction:: create_qtable

hanning_filter
~~~~~~~~~~~~~~

.. autofunction:: hanning_filter

pdf_interp_coords
~~~~~~~~~~~~~~~~~

.. autofunction:: pdf_interp_coords

pdf_odf
~~~~~~~

.. autofunction:: pdf_odf

half_to_full_qspace
~~~~~~~~~~~~~~~~~~~

.. autofunction:: half_to_full_qspace

project_hemisph_bvecs
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: project_hemisph_bvecs

threshold_propagator
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: threshold_propagator

gen_PSF
~~~~~~~

.. autofunction:: gen_PSF

LR_deconv
~~~~~~~~~

.. autofunction:: LR_deconv


.. currentmodule:: dipy.reconst.dti


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorFit`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

geodesic_anisotropy
~~~~~~~~~~~~~~~~~~~

.. autofunction:: geodesic_anisotropy

mean_diffusivity
~~~~~~~~~~~~~~~~

.. autofunction:: mean_diffusivity

axial_diffusivity
~~~~~~~~~~~~~~~~~

.. autofunction:: axial_diffusivity

radial_diffusivity
~~~~~~~~~~~~~~~~~~

.. autofunction:: radial_diffusivity

trace
~~~~~

.. autofunction:: trace

color_fa
~~~~~~~~

.. autofunction:: color_fa

determinant
~~~~~~~~~~~

.. autofunction:: determinant

isotropic
~~~~~~~~~

.. autofunction:: isotropic

deviatoric
~~~~~~~~~~

.. autofunction:: deviatoric

norm
~~~~

.. autofunction:: norm

mode
~~~~

.. autofunction:: mode

linearity
~~~~~~~~~

.. autofunction:: linearity

planarity
~~~~~~~~~

.. autofunction:: planarity

sphericity
~~~~~~~~~~

.. autofunction:: sphericity

apparent_diffusion_coef
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: apparent_diffusion_coef

tensor_prediction
~~~~~~~~~~~~~~~~~

.. autofunction:: tensor_prediction

iter_fit_tensor
~~~~~~~~~~~~~~~

.. autofunction:: iter_fit_tensor

wls_fit_tensor
~~~~~~~~~~~~~~

.. autofunction:: wls_fit_tensor

ols_fit_tensor
~~~~~~~~~~~~~~

.. autofunction:: ols_fit_tensor

nlls_fit_tensor
~~~~~~~~~~~~~~~

.. autofunction:: nlls_fit_tensor

restore_fit_tensor
~~~~~~~~~~~~~~~~~~

.. autofunction:: restore_fit_tensor

_lt_indices
~~~~~~~~~~~

.. autofunction:: _lt_indices

from_lower_triangular
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: from_lower_triangular

_lt_rows
~~~~~~~~

.. autofunction:: _lt_rows

_lt_cols
~~~~~~~~

.. autofunction:: _lt_cols

lower_triangular
~~~~~~~~~~~~~~~~

.. autofunction:: lower_triangular

decompose_tensor
~~~~~~~~~~~~~~~~

.. autofunction:: decompose_tensor

design_matrix
~~~~~~~~~~~~~

.. autofunction:: design_matrix

quantize_evecs
~~~~~~~~~~~~~~

.. autofunction:: quantize_evecs

eig_from_lo_tri
~~~~~~~~~~~~~~~

.. autofunction:: eig_from_lo_tri


.. currentmodule:: dipy.reconst.eudx_direction_getter


:class:`EuDXDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EuDXDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.reconst.forecast


:class:`ForecastModel`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ForecastModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ForecastFit`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ForecastFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

find_signal_means
~~~~~~~~~~~~~~~~~

.. autofunction:: find_signal_means

forecast_error_func
~~~~~~~~~~~~~~~~~~~

.. autofunction:: forecast_error_func

psi_l
~~~~~

.. autofunction:: psi_l

forecast_matrix
~~~~~~~~~~~~~~~

.. autofunction:: forecast_matrix

rho_matrix
~~~~~~~~~~

.. autofunction:: rho_matrix

lb_forecast
~~~~~~~~~~~

.. autofunction:: lb_forecast


.. currentmodule:: dipy.reconst.fwdti


:class:`FreeWaterTensorModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: FreeWaterTensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`FreeWaterTensorFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: FreeWaterTensorFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

fwdti_prediction
~~~~~~~~~~~~~~~~

.. autofunction:: fwdti_prediction

wls_iter
~~~~~~~~

.. autofunction:: wls_iter

wls_fit_tensor
~~~~~~~~~~~~~~

.. autofunction:: wls_fit_tensor

nls_iter
~~~~~~~~

.. autofunction:: nls_iter

nls_fit_tensor
~~~~~~~~~~~~~~

.. autofunction:: nls_fit_tensor

lower_triangular_to_cholesky
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: lower_triangular_to_cholesky

cholesky_to_lower_triangular
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: cholesky_to_lower_triangular


.. currentmodule:: dipy.reconst.gqi


:class:`GeneralizedQSamplingModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GeneralizedQSamplingModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GeneralizedQSamplingFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GeneralizedQSamplingFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

normalize_qa
~~~~~~~~~~~~

.. autofunction:: normalize_qa

squared_radial_component
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: squared_radial_component

npa
~~~

.. autofunction:: npa

equatorial_zone_vertices
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: equatorial_zone_vertices

polar_zone_vertices
~~~~~~~~~~~~~~~~~~~

.. autofunction:: polar_zone_vertices

upper_hemi_map
~~~~~~~~~~~~~~

.. autofunction:: upper_hemi_map

equatorial_maximum
~~~~~~~~~~~~~~~~~~

.. autofunction:: equatorial_maximum

patch_vertices
~~~~~~~~~~~~~~

.. autofunction:: patch_vertices

patch_maximum
~~~~~~~~~~~~~

.. autofunction:: patch_maximum

odf_sum
~~~~~~~

.. autofunction:: odf_sum

patch_sum
~~~~~~~~~

.. autofunction:: patch_sum

triple_odf_maxima
~~~~~~~~~~~~~~~~~

.. autofunction:: triple_odf_maxima


.. currentmodule:: dipy.reconst.ivim


:class:`IvimModelTRR`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IvimModelTRR
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IvimModelVP`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IvimModelVP
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IvimFit`
~~~~~~~~~~~~~~~~


.. autoclass:: IvimFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

ivim_prediction
~~~~~~~~~~~~~~~

.. autofunction:: ivim_prediction

f_D_star_prediction
~~~~~~~~~~~~~~~~~~~

.. autofunction:: f_D_star_prediction

f_D_star_error
~~~~~~~~~~~~~~

.. autofunction:: f_D_star_error

ivim_model_selector
~~~~~~~~~~~~~~~~~~~

.. autofunction:: ivim_model_selector


.. currentmodule:: dipy.reconst.mapmri


:class:`MapmriModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MapmriModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MapmriFit`
~~~~~~~~~~~~~~~~~~


.. autoclass:: MapmriFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

isotropic_scale_factor
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: isotropic_scale_factor

mapmri_index_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_index_matrix

b_mat
~~~~~

.. autofunction:: b_mat

b_mat_isotropic
~~~~~~~~~~~~~~~

.. autofunction:: b_mat_isotropic

mapmri_phi_1d
~~~~~~~~~~~~~

.. autofunction:: mapmri_phi_1d

mapmri_phi_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_phi_matrix

mapmri_psi_1d
~~~~~~~~~~~~~

.. autofunction:: mapmri_psi_1d

mapmri_psi_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_psi_matrix

mapmri_odf_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_odf_matrix

mapmri_isotropic_phi_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_phi_matrix

mapmri_isotropic_radial_signal_basis
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_radial_signal_basis

mapmri_isotropic_M_mu_independent
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_M_mu_independent

mapmri_isotropic_M_mu_dependent
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_M_mu_dependent

mapmri_isotropic_psi_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_psi_matrix

mapmri_isotropic_radial_pdf_basis
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_radial_pdf_basis

mapmri_isotropic_K_mu_independent
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_K_mu_independent

mapmri_isotropic_K_mu_dependent
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_K_mu_dependent

binomialfloat
~~~~~~~~~~~~~

.. autofunction:: binomialfloat

mapmri_isotropic_odf_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_odf_matrix

mapmri_isotropic_odf_sh_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_odf_sh_matrix

mapmri_isotropic_laplacian_reg_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_laplacian_reg_matrix

mapmri_isotropic_laplacian_reg_matrix_from_index_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_laplacian_reg_matrix_from_index_matrix

mapmri_isotropic_index_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_isotropic_index_matrix

create_rspace
~~~~~~~~~~~~~

.. autofunction:: create_rspace

delta
~~~~~

.. autofunction:: delta

map_laplace_u
~~~~~~~~~~~~~

.. autofunction:: map_laplace_u

map_laplace_t
~~~~~~~~~~~~~

.. autofunction:: map_laplace_t

map_laplace_s
~~~~~~~~~~~~~

.. autofunction:: map_laplace_s

mapmri_STU_reg_matrices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_STU_reg_matrices

mapmri_laplacian_reg_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_laplacian_reg_matrix

generalized_crossvalidation_array
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generalized_crossvalidation_array

generalized_crossvalidation
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generalized_crossvalidation

gcv_cost_function
~~~~~~~~~~~~~~~~~

.. autofunction:: gcv_cost_function


.. currentmodule:: dipy.reconst.mcsd


:class:`MultiShellResponse`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MultiShellResponse
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MultiShellDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MultiShellDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MSDeconvFit`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MSDeconvFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QpFitter`
~~~~~~~~~~~~~~~~~


.. autoclass:: QpFitter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

multi_tissue_basis
~~~~~~~~~~~~~~~~~~

.. autofunction:: multi_tissue_basis

solve_qp
~~~~~~~~

.. autofunction:: solve_qp

multi_shell_fiber_response
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: multi_shell_fiber_response

mask_for_response_msmt
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: mask_for_response_msmt

response_from_mask_msmt
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: response_from_mask_msmt

auto_response_msmt
~~~~~~~~~~~~~~~~~~

.. autofunction:: auto_response_msmt


.. currentmodule:: dipy.reconst.msdki


:class:`MeanDiffusionKurtosisModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MeanDiffusionKurtosisModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MeanDiffusionKurtosisFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MeanDiffusionKurtosisFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

mean_signal_bvalue
~~~~~~~~~~~~~~~~~~

.. autofunction:: mean_signal_bvalue

msk_from_awf
~~~~~~~~~~~~

.. autofunction:: msk_from_awf

awf_from_msk
~~~~~~~~~~~~

.. autofunction:: awf_from_msk

msdki_prediction
~~~~~~~~~~~~~~~~

.. autofunction:: msdki_prediction

wls_fit_msdki
~~~~~~~~~~~~~

.. autofunction:: wls_fit_msdki

design_matrix
~~~~~~~~~~~~~

.. autofunction:: design_matrix


.. currentmodule:: dipy.reconst.multi_voxel


:class:`MultiVoxelFit`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MultiVoxelFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CallableArray`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CallableArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit


.. currentmodule:: dipy.reconst.odf


:class:`OdfModel`
~~~~~~~~~~~~~~~~~


.. autoclass:: OdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfFit`
~~~~~~~~~~~~~~~


.. autoclass:: OdfFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

gfa
~~~

.. autofunction:: gfa

minmax_normalize
~~~~~~~~~~~~~~~~

.. autofunction:: minmax_normalize


.. currentmodule:: dipy.reconst.qtdmri


:class:`QtdmriModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QtdmriModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QtdmriFit`
~~~~~~~~~~~~~~~~~~


.. autoclass:: QtdmriFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

qtdmri_to_mapmri_matrix
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_to_mapmri_matrix

qtdmri_isotropic_to_mapmri_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_to_mapmri_matrix

qtdmri_temporal_normalization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_temporal_normalization

qtdmri_mapmri_normalization
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_mapmri_normalization

qtdmri_mapmri_isotropic_normalization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_mapmri_isotropic_normalization

qtdmri_signal_matrix_
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_signal_matrix_

qtdmri_signal_matrix
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_signal_matrix

qtdmri_eap_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_eap_matrix

qtdmri_isotropic_signal_matrix_
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_signal_matrix_

qtdmri_isotropic_signal_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_signal_matrix

qtdmri_eap_matrix_
~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_eap_matrix_

qtdmri_isotropic_eap_matrix_
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_eap_matrix_

qtdmri_isotropic_eap_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_eap_matrix

radial_basis_opt
~~~~~~~~~~~~~~~~

.. autofunction:: radial_basis_opt

angular_basis_opt
~~~~~~~~~~~~~~~~~

.. autofunction:: angular_basis_opt

radial_basis_EAP_opt
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: radial_basis_EAP_opt

angular_basis_EAP_opt
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: angular_basis_EAP_opt

temporal_basis
~~~~~~~~~~~~~~

.. autofunction:: temporal_basis

qtdmri_index_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_index_matrix

qtdmri_isotropic_index_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_index_matrix

qtdmri_laplacian_reg_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_laplacian_reg_matrix

qtdmri_isotropic_laplacian_reg_matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_laplacian_reg_matrix

part23_reg_matrix_q
~~~~~~~~~~~~~~~~~~~

.. autofunction:: part23_reg_matrix_q

part23_iso_reg_matrix_q
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: part23_iso_reg_matrix_q

part4_reg_matrix_q
~~~~~~~~~~~~~~~~~~

.. autofunction:: part4_reg_matrix_q

part4_iso_reg_matrix_q
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: part4_iso_reg_matrix_q

part1_reg_matrix_tau
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: part1_reg_matrix_tau

part23_reg_matrix_tau
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: part23_reg_matrix_tau

part4_reg_matrix_tau
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: part4_reg_matrix_tau

H
~

.. autofunction:: H

generalized_crossvalidation
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generalized_crossvalidation

GCV_cost_function
~~~~~~~~~~~~~~~~~

.. autofunction:: GCV_cost_function

qtdmri_isotropic_scaling
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_isotropic_scaling

qtdmri_anisotropic_scaling
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_anisotropic_scaling

design_matrix_spatial
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: design_matrix_spatial

create_rt_space_grid
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: create_rt_space_grid

qtdmri_number_of_coefficients
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: qtdmri_number_of_coefficients

l1_crossvalidation
~~~~~~~~~~~~~~~~~~

.. autofunction:: l1_crossvalidation

elastic_crossvalidation
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: elastic_crossvalidation

visualise_gradient_table_G_Delta_rainbow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: visualise_gradient_table_G_Delta_rainbow


.. currentmodule:: dipy.reconst.qti


:class:`QtiModel`
~~~~~~~~~~~~~~~~~


.. autoclass:: QtiModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QtiFit`
~~~~~~~~~~~~~~~


.. autoclass:: QtiFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

from_3x3_to_6x1
~~~~~~~~~~~~~~~

.. autofunction:: from_3x3_to_6x1

from_6x1_to_3x3
~~~~~~~~~~~~~~~

.. autofunction:: from_6x1_to_3x3

from_6x6_to_21x1
~~~~~~~~~~~~~~~~

.. autofunction:: from_6x6_to_21x1

from_21x1_to_6x6
~~~~~~~~~~~~~~~~

.. autofunction:: from_21x1_to_6x6

cvxpy_1x6_to_3x3
~~~~~~~~~~~~~~~~

.. autofunction:: cvxpy_1x6_to_3x3

cvxpy_1x21_to_6x6
~~~~~~~~~~~~~~~~~

.. autofunction:: cvxpy_1x21_to_6x6

dtd_covariance
~~~~~~~~~~~~~~

.. autofunction:: dtd_covariance

qti_signal
~~~~~~~~~~

.. autofunction:: qti_signal

design_matrix
~~~~~~~~~~~~~

.. autofunction:: design_matrix


.. currentmodule:: dipy.reconst.quick_squash

quick_squash
~~~~~~~~~~~~

.. autofunction:: quick_squash

reduce
~~~~~~

.. autofunction:: reduce


.. currentmodule:: dipy.reconst.recspeed

adj_to_countarrs
~~~~~~~~~~~~~~~~

.. autofunction:: adj_to_countarrs

argmax_from_adj
~~~~~~~~~~~~~~~

.. autofunction:: argmax_from_adj

argmax_from_countarrs
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: argmax_from_countarrs

le_to_odf
~~~~~~~~~

.. autofunction:: le_to_odf

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

proc_reco_args
~~~~~~~~~~~~~~

.. autofunction:: proc_reco_args

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

search_descending
~~~~~~~~~~~~~~~~~

.. autofunction:: search_descending

sum_on_blocks_1d
~~~~~~~~~~~~~~~~

.. autofunction:: sum_on_blocks_1d


.. currentmodule:: dipy.reconst.rumba


:class:`RumbaSDModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RumbaSDModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RumbaFit`
~~~~~~~~~~~~~~~~~


.. autoclass:: RumbaFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

logger
~~~~~~

.. autofunction:: logger

rumba_deconv
~~~~~~~~~~~~

.. autofunction:: rumba_deconv

mbessel_ratio
~~~~~~~~~~~~~

.. autofunction:: mbessel_ratio

generate_kernel
~~~~~~~~~~~~~~~

.. autofunction:: generate_kernel

rumba_deconv_global
~~~~~~~~~~~~~~~~~~~

.. autofunction:: rumba_deconv_global


.. currentmodule:: dipy.reconst.sfm


:class:`IsotropicModel`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IsotropicModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IsotropicFit`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IsotropicFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ExponentialIsotropicModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExponentialIsotropicModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ExponentialIsotropicFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExponentialIsotropicFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SparseFascicleModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SparseFascicleModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SparseFascicleFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SparseFascicleFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

sfm_design_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: sfm_design_matrix


.. currentmodule:: dipy.reconst.shm


:class:`SphHarmModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphHarmModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QballBaseModel`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QballBaseModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SphHarmFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphHarmFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CsaOdfModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CsaOdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OpdtModel`
~~~~~~~~~~~~~~~~~~


.. autoclass:: OpdtModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QballModel`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: QballModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResidualBootstrapWrapper`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResidualBootstrapWrapper
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

forward_sdeconv_mat
~~~~~~~~~~~~~~~~~~~

.. autofunction:: forward_sdeconv_mat

sh_to_rh
~~~~~~~~

.. autofunction:: sh_to_rh

gen_dirac
~~~~~~~~~

.. autofunction:: gen_dirac

spherical_harmonics
~~~~~~~~~~~~~~~~~~~

.. autofunction:: spherical_harmonics

real_sph_harm
~~~~~~~~~~~~~

.. autofunction:: real_sph_harm

real_sh_tournier_from_index
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: real_sh_tournier_from_index

real_sh_descoteaux_from_index
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: real_sh_descoteaux_from_index

real_sh_tournier
~~~~~~~~~~~~~~~~

.. autofunction:: real_sh_tournier

real_sh_descoteaux
~~~~~~~~~~~~~~~~~~

.. autofunction:: real_sh_descoteaux

real_sym_sh_mrtrix
~~~~~~~~~~~~~~~~~~

.. autofunction:: real_sym_sh_mrtrix

real_sym_sh_basis
~~~~~~~~~~~~~~~~~

.. autofunction:: real_sym_sh_basis

sph_harm_ind_list
~~~~~~~~~~~~~~~~~

.. autofunction:: sph_harm_ind_list

order_from_ncoef
~~~~~~~~~~~~~~~~

.. autofunction:: order_from_ncoef

smooth_pinv
~~~~~~~~~~~

.. autofunction:: smooth_pinv

lazy_index
~~~~~~~~~~

.. autofunction:: lazy_index

normalize_data
~~~~~~~~~~~~~~

.. autofunction:: normalize_data

hat
~~~

.. autofunction:: hat

lcr_matrix
~~~~~~~~~~

.. autofunction:: lcr_matrix

bootstrap_data_array
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bootstrap_data_array

bootstrap_data_voxel
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bootstrap_data_voxel

sf_to_sh
~~~~~~~~

.. autofunction:: sf_to_sh

sh_to_sf
~~~~~~~~

.. autofunction:: sh_to_sf

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix

calculate_max_order
~~~~~~~~~~~~~~~~~~~

.. autofunction:: calculate_max_order

anisotropic_power
~~~~~~~~~~~~~~~~~

.. autofunction:: anisotropic_power

convert_sh_to_full_basis
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: convert_sh_to_full_basis

convert_sh_from_legacy
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: convert_sh_from_legacy

convert_sh_to_legacy
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: convert_sh_to_legacy


.. currentmodule:: dipy.reconst.shore


:class:`ShoreModel`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ShoreModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ShoreFit`
~~~~~~~~~~~~~~~~~


.. autoclass:: ShoreFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

shore_matrix
~~~~~~~~~~~~

.. autofunction:: shore_matrix

shore_matrix_pdf
~~~~~~~~~~~~~~~~

.. autofunction:: shore_matrix_pdf

shore_matrix_odf
~~~~~~~~~~~~~~~~

.. autofunction:: shore_matrix_odf

l_shore
~~~~~~~

.. autofunction:: l_shore

n_shore
~~~~~~~

.. autofunction:: n_shore

create_rspace
~~~~~~~~~~~~~

.. autofunction:: create_rspace

shore_indices
~~~~~~~~~~~~~

.. autofunction:: shore_indices

shore_order
~~~~~~~~~~~

.. autofunction:: shore_order


.. currentmodule:: dipy.reconst.utils

dki_design_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: dki_design_matrix

cti_design_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: cti_design_matrix


.. currentmodule:: dipy.reconst.vec_val_sum

vec_val_vect
~~~~~~~~~~~~

.. autofunction:: vec_val_vect

